<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/matricola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n86002593"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="64dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toBottomOf="@id/matricola"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/firstVersionActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/start_first_version_activity" />

        <Button
            android:id="@+id/secondVersionActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_activity_with_object" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>